--- a/sft-facturacion/static/description/index.html
+++ b/sft-facturacion/static/description/index.html
@@ -32,6 +32,13 @@
 			Tel&eacute;fono: <strong>871 297 7677</strong><br/>
 
 			Correo:     <strong>contacto@sft-facturacion.com</strong>
+			
+			<h3 class="oe_slogan" style="color:#875A7B; text-align: left;">¿Aún tienes duda? Prueba nuestro demo</h3>
+			URL:          <strong>http://softhink.ddns.net:8669/web?db=demo1</strong>
+			Usuario:     <strong>demo1</strong>
+			Password:     <strong>demo1</strong>
+			
+			
         </div>
     </div>
 </section>
